--- a/css/sass/bootstrap.scss
+++ b/css/sass/bootstrap.scss
@@ -42,6 +42,7 @@
 html {
   font-family: sans-serif;
   line-height: 1.15;
+  height: 100vh;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
@@ -56,7 +57,8 @@ body {
   line-height: 1.5;
   color: $text;
   text-align: left;
-  background-color: $white; }
+  height: 100vh;
+  background-color: #f1f4f6; }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important; }
@@ -2633,13 +2635,23 @@ input[type="button"].btn-block {
   font-weight: 400;
   line-height: 1.5;
   border-radius: $radius;
-  width: 75px;
-  margin-right: -38px;
   color: #495057;
   text-align: center;
   white-space: nowrap;
   background-color: #e9ecef;
   border: 1px solid #ced4da;
+
+  &.right-group {
+    padding-left: 45px;
+    width: auto;
+    margin-left: -38px;
+  }
+
+  &.left-group {
+    width: auto;
+    padding-right: 45px;
+    margin-right: -38px;
+  }
  
 }
   .input-group-text input[type="radio"],
