--- a/css/sass/header.scss
+++ b/css/sass/header.scss
@@ -3,6 +3,7 @@
   border-bottom: 1px solid $pallete-borders;
   height: 50px;
   width: 100%; 
+  background-color: $white;
   &__container { 
     align-items: center;
     display: flex;
