--- a/css/sass/variables.scss
+++ b/css/sass/variables.scss
@@ -18,7 +18,8 @@ $none: 0 !important;
 $text: #212529;
 $padding-button: 5px 20px;
 $border-form: #dee2e6;
-
+$focus: #70a1ff94 !important;
+$dash_shadow: 0px 0px 19px 2px rgba(0, 0, 0, 0.07);
 
 $pallete1: #00a8ff !important;
 $pallete2: #9c88ff !important;
@@ -37,13 +38,13 @@ $color-hover: rgba(112,161,255,.22)!important;
   background: $pallete2 }
 
 .color3 {
-  background: $pallete2 }
+  background: $pallete3 }
 
 .color4 { 
   background: $pallete4 }
 
 .dash_shadow {
-  box-shadow: 0px 0px 19px 2px rgba(0, 0, 0, 0.07); }
+  box-shadow: $dash_shadow }
 
 .jumbotron-fluid {
   padding-right: 0;
