--- a/css/sass/bootstrap.scss
+++ b/css/sass/bootstrap.scss
@@ -7285,7 +7285,7 @@ button.bg-dark:focus {
   font-style: italic !important; }
 
 .text-white {
-  color: $white !important; }
+  color: $white; }
 
 .text-primary {
   color: $primary; }
