--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -22,7 +22,8 @@
   width: 50px;
   display: block;
   height: 50px;
-  transition: .4s; 
+  transition: .4s;
+  background-color: $white; 
 
   &-menu-mobile {
     display: none; 
@@ -83,11 +84,20 @@
     min-width: 400px!important;
     padding: 0!important;
     overflow: hidden;
+    @media(max-width: 768px) {
+      min-width: auto;
+      padding: 0!important;
+      width: 98.7%!important;
+      overflow: hidden;
+      margin: 0!important;
+      border-radius: 0!important;
+      left: 0!important;
+    }
   }
 
   .profile-header {
     width: 100%;
-    padding: 15px;
+    padding: 15px; 
     background: $primary;
 
     .thumb-nail {
