--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -85,7 +85,7 @@
     padding: 0!important;
     overflow: hidden;
     @media(max-width: 768px) {
-      min-width: 97%;
+      min-width: 97%!important;
       padding: 0!important;
       width: 98.7%!important;
       overflow: hidden;
